--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .header-section {
     background-color: #1F2937;
     padding: 0 96px;
-    
+    margin: 0;
 }
 
 .header {
@@ -88,5 +88,59 @@ button {
     padding: 4px 16px;
     border: 0;
     color: #F9FAF8;
+    font-weight: bold;
+}
+
+.information {
+    text-align: center;
+    background-color: white;     /* Just for fun! */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 70px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.info-text {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.images {
+    display: flex;  
+    justify-content: space-around;
+}
+
+.img-div {
+    height: 100px;
+    width: 100px;
+    background-color: white;
+    border-radius: 16px;
+    border: 4px;
+    border-color: #3882F6;
+    border-style: solid;
+}
+
+.img-t {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 150px;
+}
+
+.quote-section {
+    background-color: #EFE7EB;
+    text-align: left;
+    padding: 100px;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    font-weight: lighter;
+}
+
+#author {
+    text-align: right;
     font-weight: bold;
 }
